syntax = "proto3";

option java_multiple_files = true;
package com.isa.grpc;

message MessageProto{
  string message = 1;
  int64 randomInteger = 2;
}

message MessageResponseProto {
  string response = 1;
  string status = 2;
}